--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "astro": "^5.17.1",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
+    "@astrojs/vercel": "^9.0.4",
     "sass": "^1.97.3"
   }
 }
