--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "astro": "^5.17.1",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "stripe": "^20.3.1"
   },
   "devDependencies": {
     "@astrojs/vercel": "^9.0.4",
